# EarthByte_Underworld

./: .gitignore  .hgignore  README.md  SConfigure  SConstruct
ImportersToolbox/: SConfigure  SConscript  SConstruct  configure.py
InputFiles/: Analytic.ipynb  Analytic.py  LidDriven.ipynb  LidDriven.py  Numpy gLucifer.ipynb  NumpyInterfaceTests.ipynb  Parametric Thermal.ipynb  RBFSwarm.py  RayleighTaylorBenchmark.ipynb  RayleighTaylorBenchmark.json  RayleighTaylorBenchmark.py  RayleighTaylorBenchmark.xml  RayleighTaylorBenchmark2.ipynb  SimpleThermal.xml  SwapWithSinkingBox.py  TestAllNotebooks.py  ThermalConvection.ipynb  ThermalConvection.py  exps-1-ensemble-201306-small-0000-0095.sh  glucifer.pylab tutorial.ipynb  multiSpiralParticles.py  parametricThermal.py  programmaticShapes.py  pyUnderworld.py  runAndQuery.py  runAndReRun.py  spiralParticles.py  swarmVarInitFromImage.py  teleportationSwarm.py
PICellerator/: SConscript
Solvers/: SConscript
Spherical/: SConscript  SConstruct
StGermain/: SConscript
StgFEM/: SConscript
Viscoelastic/: SConscript  SConstruct
docker-base/: Dockerfile  docker-compose.yaml
docs/: guidelines.md  guidelines.txt
lecode_tools/: README  (+2 more)
libUnderworld/gLucifer/Viewer/src/: ApplicationInterface.h  CMakeLists.txt  ColourMap.cpp  ColourMap.h  DrawingObject.cpp  DrawingObject.h  Extensions.cpp  GLucifer.cpp  GLuciferServer.cpp  GLuciferServer.h  GLuciferViewer.cpp  GLuciferViewer.h  Geometry.cpp  Geometry.h  GraphicsUtil.cpp  GraphicsUtil.h  Include.h  InteractiveViewer.cpp  Model.cpp  Model.h  OpenGLViewer.cpp  OpenGLViewer.h  Points.cpp  Shaders.cpp  Shapes.cpp  TriSurfaces.cpp  Types.h  View.cpp  View.h
libUnderworld/gLucifer/Viewer/src/Main/: AGLViewer.cpp  AGLViewer.h  GlutViewer.cpp  GlutViewer.h  OSMesaViewer.cpp  OSMesaViewer.h  SDLViewer.cpp  SDLViewer.h  X11Viewer.cpp  X11Viewer.h
libUnderworld/gLucifer/Viewer/src/html/: draw.js  index.html  lib.js  server.js  styles.css
libUnderworld/gLucifer/Viewer/src/shaders/: pointShader.frag  pointShader.vert
(+2299 files in other folders)
